# pharmassist-catalog-fr

./: .gitignore  ATTRIBUTION.md  BUILD_REPRO.md  LICENSES.md  Makefile  README.md  pyproject.toml
src/pharmassist_catalog_fr/: __init__.py  cli.py  ingest.py  sources.py
src/pharmassist_catalog_fr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ingest.py
