[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmassist-catalog-fr"
version = "0.1.0"
description = "FR OTC/parapharmacy open-data ingestion tool (BDPM + OBF)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "requests>=2.32,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.8,<0.9"
]

[project.scripts]
pharmassist-catalog-fr = "pharmassist_catalog_fr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
